--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@hapi/joi": "^17.1.1",
     "@sendgrid/mail": "^8.1.6",
     "cors": "^2.8.5",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "gridfs-stream": "^1.1.1",
